# crutch

./: .gitignore  .gitmodules  CMakeLists.txt  runner.sh
application/: Makefile
application/src/: main.cpp
engine/: Makefile
engine/src/: Crutch.h
engine/src/core/: Application.cpp  Application.h  Core.h  Log.cpp  Log.h  Window.h  entryPoint.h  pcl.h
engine/src/core/event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engine/src/platform/linux/: WindowLinux.cpp  WindowLinux.h
sandbox/src/: Sandbox.cpp  main.cpp
shiva/: CMakeLists.txt
shiva/src/: test.cpp  test.h
shivaEngine/: CMakeLists.txt
shivaEngine/src/: pch.h  shiva.h
shivaEngine/src/core/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h  Window.h  core.h
shivaEngine/src/core/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
shivaEngine/src/core/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
shivaEngine/src/core/layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
shivaEngine/src/platform/opengl/: ImGuiOpenGlRenderer.cpp  ImGuiOpenGlRenderer.h
shivaEngine/src/platform/unix/: UnixWindow.cpp  UnixWindow.h
testcmake/: CMakeLists.txt
testcmake/sources/: main.cpp
testcmake/sources/lib1/: main.cpp
testcmake/sources/lib2/: main.cpp
testcmake/sublib/: CMakeLists.txt  libqwe.cpp  libqwe.h
